--- a/workflows/KBS_healthy_youtube2discord.yml
+++ b/workflows/KBS_healthy_youtube2discord.yml
@@ -15,4 +15,4 @@ jobs:
           DISCORD_AVATAR: ${{ secrets.DISCORD_AVATAR_KBSHEALTHY }}
         uses: Ilshidur/action-discord@master
         with:
-          args: "`KBS 생로병사의 비밀 - YouTube`'\n'**${{on.youtube.outputs.title}}**'\n'${{on.youtube.outputs.link}}"
+          args: "`의학채널 비온뒤 - YouTube`'\n'**${{on.youtube.outputs.title}}**'\n'${{on.youtube.outputs.link}}"
