--- a/workflows/EBS_Body_youtube2discord.yml
+++ b/workflows/EBS_Body_youtube2discord.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Discord notification
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-          DISCORD_USERNAME: ${{ secrets.DISCORD_USERNAME_GYUMCHOI }}
-          DISCORD_AVATAR: ${{ secrets.DISCORD_AVATAR_GYUMCHOI }}
+          DISCORD_USERNAME: ${{ secrets.DISCORD_USERNAME_EBSBODY }}
+          DISCORD_AVATAR: ${{ secrets.DISCORD_AVATAR_EBSBODY }}
         uses: Ilshidur/action-discord@master
         with:
           args: "`EBS 귀하신 몸 - YouTube Playlist`'\n'**${{steps.prepare.outputs.escaped_title}}**'\n'${{on.youtube.outputs.link}}"
