--- a/workflows/KBS_healthy_youtube2discord.yml
+++ b/workflows/KBS_healthy_youtube2discord.yml
@@ -8,11 +8,19 @@ jobs:
     name: Send a message to discord
     runs-on: ubuntu-latest
     steps:
+      - name: Prepare message
+        id: prepare
+        run: |
+          TITLE="${{on.youtube.outputs.title}}"
+          # Replace ' and " with escaped versions
+          ESCAPED_TITLE=$(echo "$TITLE" | sed "s/'/\\\'/g" | sed 's/"/\\"/g')
+          echo "Escaped title: $ESCAPED_TITLE"
+          echo "::set-output name=escaped_title::$ESCAPED_TITLE"
       - name: Discord notification
         env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_KBSHEALTHY }}
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           DISCORD_USERNAME: ${{ secrets.DISCORD_USERNAME_KBSHEALTHY }}
           DISCORD_AVATAR: ${{ secrets.DISCORD_AVATAR_KBSHEALTHY }}
         uses: Ilshidur/action-discord@master
         with:
-          args: "`KBS 생로병사의 비밀 - YouTube`'\n'**${{on.youtube.outputs.title}}**'\n'${{on.youtube.outputs.link}}"
+          args: "`KBS 생로병사의 비밀 - YouTube`'\n'**${{steps.prepare.outputs.escaped_title}}**'\n'${{on.youtube.outputs.link}}"
